Bug #1566 - Firefox bug: Change Avatar "Browse" button misaligned

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -263,6 +263,9 @@ input[type="submit"]{
     &.disabled-opt{
         opacity: 0.4;
     }
+    &[type="file"]{
+        padding: 0 12px;
+    }
 }
 .notify-settings {
     .notify-members {
